[media-source] Fix imported/w3c/web-platform-tests/media-source/mediasource-avtracks.html https://bugs.webkit.org/show_bug.cgi?id=162104

Reviewed by Eric Carlson.

Source/WebCore:

Fixes test: imported/w3c/web-platform-tests/media-source/mediasource-avtracks.html

Multiple overlapping issues are causing this test to fail:

- When a MediaSource object is not attached from a HTMLMediaElement, it's SourceBuffer
  objects will return `null` from .videoTracks and .audioTracks, foiling the tests ability
  to assert that sourceBuffer.videoTracks.length == 0.

- When a MediaSource object is detached from a HTMLMediaElement, it's tracks are removed
  but do not generate 'removedtrack' events.

When these bugs were fixed, a few more popped up:

- The HTMLMediaElement removes its tracks before it closes the MediaSource, which causes an
  assertion when the MediaSource tells the HTMLMediaElement to remove its copy of the
  source's tracks (which have already been removed).

- When the HTMLMediaElement is stop()-ed due to its ScriptExecutionContext being destroyed,
  it tries to close its MediaSource, which has itself already been stop()-ed and thus asserts.

To eliminate all these bugs and make the code more self explanatory, we will rename the
HTMLMediaElement's closeMediaSource() method to detachMediaSource(), and the MediaSource's
close() method to detachFromElement(). The only way to close a MediaSource is now by calling
detachMediaSource() from the HTMLMediaElement.  The parts of the "Detaching from a media
element" algorithm which were previously spread across setReadyState() and onReadyStateChange()
are now unified in the newly renamed detachFromElement() method. The HTMLMediaElement will
first detach its MediaSource, and only after that remove all its tracks.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::setReadyState): Move steps into detachFromElement().
(WebCore::MediaSource::onReadyStateChange): Ditto.
(WebCore::MediaSource::detachFromElement): Perform the steps as specified.
(WebCore::MediaSource::attachToElement): Takes a reference rather than a bare pointer.
(WebCore::MediaSource::stop): Ask the media elemnet to detach.
(WebCore::MediaSource::close): Renamed to detachFromElement().
* Modules/mediasource/MediaSource.h:
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::videoTracks): Always return a valid TrackList object.
(WebCore::SourceBuffer::audioTracks): Ditto.
(WebCore::SourceBuffer::textTracks): Ditto.
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::~HTMLMediaElement): Renamed closeMediaSource() -> detachMediaSource().
(WebCore::HTMLMediaElement::prepareForLoad): Ditto.
(WebCore::HTMLMediaElement::loadResource): Ditto.
(WebCore::HTMLMediaElement::noneSupported): Ditto.
(WebCore::HTMLMediaElement::mediaLoadingFailedFatally): Ditto.
(WebCore::HTMLMediaElement::detachMediaSource): Ditto.
(WebCore::HTMLMediaElement::userCancelledLoad): Ditto.
(WebCore::HTMLMediaElement::createMediaPlayer): Ditto.
(WebCore::HTMLMediaElement::clearMediaPlayer): Ditto. Also, detach from the MediaSource before
    removing tracks.
(WebCore::HTMLMediaElement::closeMediaSource): Deleted.
* html/HTMLMediaElement.h:
* html/track/TrackListBase.cpp:
(TrackListBase::remove): Only try to clear the media element from Tracks that have one.

LayoutTests:

* imported/w3c/web-platform-tests/media-source/mediasource-avtracks-expected.txt
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/180284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206127 268f45cc-cd09-0410-ab3c-d52691b4dbfc