Source/WebCore/html/track/TrackListBase.cpp
@@ -73,8 +73,10 @@ void TrackListBase::remove(TrackBase& track, bool scheduleEvent)
     size_t index = m_inbandTracks.find(&track);
     ASSERT(index != notFound);
 
-    ASSERT(track.mediaElement() == m_element);
-    track.setMediaElement(nullptr);
+    if (track.mediaElement()) {
+        ASSERT(track.mediaElement() == m_element);
+        track.setMediaElement(nullptr);
+    }
 
     Ref<TrackBase> trackRef = *m_inbandTracks[index];
 
